fix(query tracker): row count and truncated flag are now displayed above results table [#210]

--- a/packages/ui/src/ui/pages/query-tracker/QueryResultsView/index.scss
+++ b/packages/ui/src/ui/pages/query-tracker/QueryResultsView/index.scss
@@ -3,6 +3,10 @@
     position: relative;
     overflow: auto;
 
+    &__result-info {
+        margin-bottom: 10px;
+    }
+
     &__loading {
         display: flex;
         align-items: center;
